# CatManagementBackend

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
CatManagementBackend/: asgi.py  settings.py  urls.py  wsgi.py
core/management/commands/: populate_db.py
main/: admin.py  examples.py  filters.py  managers.py  models.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py
tests/: conftest.py  factories.py
tests/main/: test_views.py
users/: admin.py  examples.py  managers.py  models.py  serializers.py  urls.py
users/migrations/: 0001_initial.py
